# burning-man

./: .gitignore  2024-field-note-transcriptions-pt1.csv  2024-field-note-transcriptions.csv  2025-field-note-transcriptions.csv  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN-next-gen-research.md  README.md  build-dev.sh  pyproject.toml  streamlit_app.py  transcriptions-v1.csv  transcriptions.csv
docs/: census-analysis.html  field-notes.html  index.html  regional-burns-2026.html  rising-sparks-brand-kit.md
reports/: FINAL_ANALYSIS_REPORT.md  basic_stats_report.md  census2025_cohort_analysis_briefing.md  census2025_cohort_retention.csv  census2025_cohort_retention.md  census2025_crosstab_counts_all_campPlaced.csv  census2025_crosstab_counts_campPlaced_dontKnow.csv  census2025_crosstab_counts_campPlaced_missing.csv  census2025_crosstab_counts_campPlaced_no.csv  census2025_crosstab_counts_campPlaced_yes.csv  census2025_crosstab_pct_all_campPlaced.csv  census2025_crosstab_pct_all_campPlaced_flat.csv  census2025_crosstab_pct_campPlaced_yes.csv  census2025_weighted_analysis_report.md  census2025_weighted_crosstabs.md  module_10_return_intent.md  module_1_transformation.md  module_2_survival.md  module_3_identity.md  module_4_symbolism.md  module_5_diversity.md  module_6_relationships.md  module_7_next_gen.md  module_7_youth_voice.md  module_8_acculturation.md  module_9_belonging.md  regional_burns_2026_a4.html
src/: spencer.py
static/: Theme Camp Dues!.csv
tests/: test_cdx_nextgen_acculturation.py  test_cdx_nextgen_prep.py  test_cdx_nextgen_reporting.py  test_cohort_briefing.py  (+7 more)
(+184 files in other folders)
